# graphdb-testing

./: .gitmodules  README.md  make_graphs.py  run_tests.sh  sysinfo.sh
charts/: 2013.04.30.12.23.06.medium.build.html  2013.04.30.12.23.06.medium.mem.html  2013.04.30.12.23.06.medium.pr.html  2013.04.30.12.23.06.medium.sssp.html  2013.04.30.12.23.06.medium.sv.html  2013.04.30.12.23.06.medium.update.html  2013.04.30.12.23.06.small.build.html  2013.04.30.12.23.06.small.mem.html  2013.04.30.12.23.06.small.pr.html  2013.04.30.12.23.06.small.sssp.html  2013.04.30.12.23.06.small.sv.html  2013.04.30.12.23.06.small.update.html  2013.04.30.12.23.06.tiny.build.html  2013.04.30.12.23.06.tiny.mem.html  2013.04.30.12.23.06.tiny.pr.html  2013.04.30.12.23.06.tiny.sssp.html  2013.04.30.12.23.06.tiny.sv.html  2013.04.30.12.23.06.tiny.update.html  irad.final.large.build.html  irad.final.large.mem.html  irad.final.large.pr.html  irad.final.large.sssp.html  irad.final.large.sv.html  irad.final.large.update.html  irad.final.medium.build.html  irad.final.medium.mem.html  irad.final.medium.pr.html  irad.final.medium.sssp.html  irad.final.medium.sv.html  irad.final.medium.update.html  irad.final.small.build.html  irad.final.small.mem.html  irad.final.small.pr.html  irad.final.small.sssp.html  irad.final.small.sv.html  irad.final.small.update.html  irad.final.tiny.build.html  irad.final.tiny.mem.html  irad.final.tiny.pr.html  irad.final.tiny.sssp.html  (+2 more)
lib/mtgl/: AUTHORS  COPYING  ChangeLog  FIRST_TUTORIAL  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.status  configure  configure.ac
lib/mtgl/config/: mtgl_check_atomics.m4  mtgl_check_qthreads.m4  mtgl_compiler_option.m4  mtgl_compiler_options.m4
lib/mtgl/doc/: Doxyfile  Doxyfile_wiki  uncrustify.cfg
lib/mtgl/mtgl/: Makefile  Makefile.am  Makefile.in  badrank.hpp  compressed_sparse_row_graph.hpp  edge_array_adapter.hpp  edmonds_karp_max_flow.hpp  filter_adapter.hpp  generate_dimacs_random_graph.hpp  generate_girvan_newman_graph.hpp  generate_mesh_graph.hpp  generate_plod_graph.hpp  generate_random_subgraph.hpp  graph_traits.hpp  hachar.hpp  merge_sort.hpp  metrics.hpp  mmap_traits.hpp  mtgl_config.h.in  mtgl_io.hpp  mtgl_string.hpp  mtgl_test.hpp  queue.hpp  random_walk.hpp  read_binary.hpp  read_matrix_market.hpp  shiloach_vishkin.hpp  sssp_deltastepping.hpp  stamp-h1  subiso_triangles.hpp  types.hpp  ufl.h  util.hpp  vektor.h  vertex_betweenness.hpp  visit_adj.hpp  write_binary.hpp  write_dimacs.hpp  write_matrix_market.hpp  write_mmap.hpp  (+1 more)
lib/mtgl/test/: Makefile  Makefile.am  Makefile.in  custom2file  custom2file.cpp  generate_euler_tour  generate_euler_tour.cpp  graph2file  graph2file.cpp  persist_graph  persist_graph.cpp  rmat2file  rmat2file.cpp  subiso_5cycles  subiso_5cycles.cpp  subiso_triangles  subiso_triangles.cpp  switch_endianness  switch_endianness.cpp  test_adjacency_iteration  test_adjacency_iteration.cpp  test_badrank  test_badrank.cpp  test_breadth_first_search  test_breadth_first_search.cpp  test_connected_components  test_connected_components.cpp  test_duplicate  test_duplicate.cpp  test_dynamic_array  test_dynamic_array.cpp  test_edmonds_karp  test_edmonds_karp.cpp  test_edmonds_karp_small  test_edmonds_karp_small.cpp  test_expand_one_edge  test_expand_one_edge.cpp  test_filtering  test_filtering.cpp  test_graph  (+52 more)
lib/mtgl/test/.deps/: custom2file-custom2file.Po  generate_euler_tour-generate_euler_tour.Po  graph2file-graph2file.Po  persist_graph-persist_graph.Po  rmat2file-rmat2file.Po  subiso_5cycles-subiso_5cycles.Po  subiso_triangles-subiso_triangles.Po  switch_endianness-switch_endianness.Po  test_adjacency_iteration-test_adjacency_iteration.Po  test_badrank-test_badrank.Po  test_breadth_first_search-test_breadth_first_search.Po  test_connected_components-test_connected_components.Po  test_duplicate-test_duplicate.Po  test_dynamic_array-test_dynamic_array.Po  test_edmonds_karp-test_edmonds_karp.Po  test_edmonds_karp_small-test_edmonds_karp_small.Po  test_expand_one_edge-test_expand_one_edge.Po  test_filtering-test_filtering.Po  test_graph-test_graph.Po  test_graph_parallel-test_graph_parallel.Po  test_hachar-test_hachar.Po  test_independent_set-test_independent_set.Po  test_mmap-test_mmap.Po  test_mtgl_strtok-test_mtgl_strtok.Po  test_mutable_graph-test_mutable_graph.Po  test_numeric-test_numeric.Po  test_pagerank-test_pagerank.Po  test_partitioning_schemes-test_partitioning_schemes.Po  test_persist_xht-test_persist_xht.Po  test_property_map-test_property_map.Po  test_pseudo_diameter-test_pseudo_diameter.Po  test_random-test_random.Po  test_read_graph-test_read_graph.Po  test_shared_ptr-test_shared_ptr.Po  test_sort-test_sort.Po  test_sssp_deltastepping-test_sssp_deltastepping.Po  test_subgraph-test_subgraph.Po  test_subgraph_isomorphism-test_subgraph_isomorphism.Po  test_triangles-test_triangles.Po  test_vertex_betweenness-test_vertex_betweenness.Po  (+6 more)
lib/mtgl/tutorial/: Makefile  Makefile.am  Makefile.in  example1.cpp  example2.cpp  example3.cpp  exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  filter_example.cpp  input_output.cpp  property_maps1.cpp  property_maps2.cpp  property_maps3.cpp  property_maps4.cpp  property_maps5.cpp  subgraph_isomorphism1.cpp  subgraph_isomorphism2.cpp  subgraph_isomorphism3.cpp  subgraph_isomorphism4.cpp  triangles.cpp
lib/mtgl/win32/: stdint.h
lib/mtgl/win32_example/: mtgl_subiso_triangles2.sln
lib/mtgl/win32_example/mtgl_subiso_triangles2/: ReadMe.txt  mtgl_subiso_triangles2.cpp  mtgl_subiso_triangles2.vcxproj  mtgl_subiso_triangles2.vcxproj.filters  stdafx.cpp
results/: 2013.04.30.12.23.06.boost.large  2013.04.30.12.23.06.boost.medium  2013.04.30.12.23.06.boost.small  2013.04.30.12.23.06.boost.tiny  2013.04.30.12.23.06.dex.small  2013.04.30.12.23.06.dex.tiny  2013.04.30.12.23.06.mtgl.large  2013.04.30.12.23.06.mtgl.medium  2013.04.30.12.23.06.mtgl.small  2013.04.30.12.23.06.mtgl.tiny  2013.04.30.12.23.06.neo4j.large  2013.04.30.12.23.06.neo4j.medium  2013.04.30.12.23.06.neo4j.medium.fail  2013.04.30.12.23.06.neo4j.small  (+30 more)
(+223 files in other folders)
