# -*- Makefile -*-

mtgldir = $(includedir)/mtgl

dist_mtgl_HEADERS = \
	adjacency_list.hpp \
	algorithm.hpp \
	badrank.hpp \
	breadth_first_search.hpp \
	compressed_sparse_row_graph.hpp \
	connected_components.hpp \
	duplicate_adapter.hpp \
	dynamic_array.hpp \
	edge_array_adapter.hpp \
	edmonds_karp_max_flow.hpp \
	euler_tour.hpp \
	filter_adapter.hpp \
	filter_graph.hpp \
	generate_dimacs_random_graph.hpp \
	generate_erdos_renyi_graph.hpp \
	generate_girvan_newman_graph.hpp \
	generate_mesh_graph.hpp \
	generate_plod_graph.hpp \
	generate_random_subgraph.hpp \
	generate_rmat_graph.hpp \
	graph_traits.hpp \
	hachar.hpp \
	hash_defs.hpp \
	independent_set.hpp \
	maxheap.h \
	merge_sort.hpp \
	metrics.hpp \
	mmap_traits.hpp \
	mtgl_adapter.hpp \
	mtgl_boost_property.hpp \
	mtgl_io.hpp \
	mtgl_string.hpp \
	mtgl_test.hpp \
	neighborhoods.hpp \
	numeric.hpp \
	pagerank.hpp \
	partitioning.hpp \
	psearch.hpp \
	pseudo_diameter.hpp \
	queue.hpp \
	random.hpp \
	random_walk.hpp \
	read_binary.hpp \
	read_dimacs.hpp \
	read_matrix_market.hpp \
	read_mmap.hpp \
	shared_ptr.hpp \
	shiloach_vishkin.hpp \
	SMVkernel.h \
	snap_util.h \
	sssp_deltastepping.hpp \
	stats.hpp \
	stinger_graph.hpp \
	stinger_graph_adapter.hpp \
	strtod.hpp \
	subgraph_adapter.hpp \
	subgraph_isomorphism.hpp \
	subiso_5cycles.hpp \
	subiso_triangles.hpp \
	transpose_adapter.hpp \
	triangles.hpp \
	types.hpp \
	ufl.h \
	util.hpp \
	vektor.h \
	vertex_betweenness.hpp \
	visit_adj.hpp \
	VolVolume.h \
	wcnm.hpp \
	write_binary.hpp \
	write_dimacs.hpp \
	write_graphlets.hpp \
	write_matrix_market.hpp \
	write_mmap.hpp \
	xmt_hash_set.hpp \
	xmt_hash_table.hpp \
	xmt_hash_table_adapter.hpp

nodist_mtgl_HEADERS = \
	mtgl_config.h
